 * Added styles to view pages.
 * Changed "number of items" text for subject views to make it clearer.
 * Added forgotten "blister arrow"
 * Broke up eprints.js
 * Renamed all js files to be prefixed with a number to make them look 
    less confusing.

2006-11-23 cjg
 * Got rid of toggling menu at top of screen - moved actions into Admin

2006-11-24 cjg
 * Fixed plugin loader to only load files _ending_ in .pm
 * Changed ABSTRACT to DISABLE as the varname to disable a plugin.

2006-11-24 cjg
 * Added local .js and .css files to show people where to add stuff.

2006-11-24 cjg
 * Fixed bug in plugin loader.

2006-11-24 cjg
 * Fixed back button/re-post problem
 * Changed login system to set a cookie BEFORE you log in
 * stuff now creates a url of the static view for the resource after
    a post redirects.
 * Messages in a POST request now save to a db table to be shown the
    next time the current user gets a screen rendered.
 * Fixed bug in blister bar - did not highlight deposit stage.

2006-11-26 cjg
 * Fixed issues with internal buttons and values being passed int the new
    POST/GET system.
 * Fixed bug that surrounds lost the [?] help button.
 * Disposed of an XML which is tested but not used.
 * Removed get_internal_value_id - no longer used
 * removed get_internal_value from metafield

2006-11-27 moj
 * RequestRemoval/RemoveWithEmail/RejectWithEmail now use a phrase for
    'click to edit'.
 * AbstractSearch uses phrase for bad subscreen
 * Upload's Hide/Show options are now phrases. 

2006-11-27 moj
 * Added phrases for unphrased admin actions

2006-11-28 moj
 * Added phrases for import plugins (not for those in constructor,
    as no session is available at that point). 
 * Renamed $name to $a_name/$e_name in BibTeX, as this was giving
    warnings.

2006-11-28 moj
 * Missed phrase in XML, tidied up file a bit.
 * General testing with flawed XML import file. 

2006-11-29 tdb
 * Fix XML::LibXML::Text->toString returning undef on empty string
